--- a/GardeningServices/app/src/main/res/layout/activity_add_new_address.xml
+++ b/GardeningServices/app/src/main/res/layout/activity_add_new_address.xml
@@ -169,8 +169,9 @@
         android:backgroundTint="@color/Green1"
         android:id="@+id/btn_save_address"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/open_sans"
+        android:fontFamily="@font/open_sans_semi_bold"
         android:text="@string/save_new_address"
-        android:layout_width="match_parent">
+        android:layout_width="match_parent"
+        android:textColor="@color/white">
     </androidx.appcompat.widget.AppCompatButton>
 </LinearLayout>
