--- a/GardeningServices/app/src/main/res/layout/activity_check_out_shipment.xml
+++ b/GardeningServices/app/src/main/res/layout/activity_check_out_shipment.xml
@@ -34,6 +34,15 @@
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:gravity="center"/>
+            <ImageView
+                android:id="@+id/tv_back_checkout_add"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="15dp"
+                android:layout_alignParentEnd="true"
+                android:src="@drawable/ic_baseline_add_24"
+                android:layout_marginEnd="15dp"/>
         </RelativeLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
     <androidx.recyclerview.widget.RecyclerView
