--- a/GardeningServices/app/src/main/res/layout/activity_product_detail.xml
+++ b/GardeningServices/app/src/main/res/layout/activity_product_detail.xml
@@ -48,18 +48,6 @@
                 android:layout_height="300dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
-            <TextView
-                android:id="@+id/product_detail_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/product_detail_ratingBar"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="15dp"
-                android:layout_marginEnd="15dp"
-                android:textSize="20sp"
-                android:fontFamily="@font/open_sans_bold"
-                android:text="Hoa hồng"/>
             <RatingBar
                 android:id="@+id/product_detail_ratingBar"
                 android:layout_width="wrap_content"
@@ -68,12 +56,43 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginStart="15dp"
                 style="?android:attr/ratingBarStyleSmall"
-                app:layout_constraintTop_toBottomOf="@id/product_detail_image"/>
+                app:layout_constraintTop_toBottomOf="@id/product_detail_image"
+                android:visibility="invisible"/>
+            <ImageView
+                android:id="@+id/product_detail_image_name"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                app:layout_constraintTop_toBottomOf="@id/product_detail_ratingBar"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="15dp"
+                android:src="@drawable/ic_baseline_drive_file_rename_outline_24"/>
+            <TextView
+                android:id="@+id/product_detail_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toEndOf="@+id/product_detail_image_name"
+                app:layout_constraintTop_toBottomOf="@id/product_detail_ratingBar"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:textSize="20sp"
+                android:fontFamily="@font/open_sans_bold"
+                android:text="Hoa hồng"/>
+            <ImageView
+                android:id="@+id/product_detail_image_price"
+                android:layout_width="wrap_content"
+                android:layout_height="28dp"
+                app:layout_constraintTop_toBottomOf="@id/product_detail_name"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="15dp"
+                android:src="@drawable/ic_baseline_price_change_24"/>
             <TextView
                 android:id="@+id/product_detail_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/product_detail_image_price"
                 app:layout_constraintTop_toBottomOf="@id/product_detail_name"
                 android:layout_marginTop="10dp"
                 android:layout_marginStart="15dp"
@@ -92,7 +111,8 @@
                 android:layout_marginEnd="15dp"
                 android:textSize="18sp"
                 android:fontFamily="@font/open_sans_bold"
-                android:text="Giảm giá"/>
+                android:text="Giảm giá"
+                android:visibility="invisible"/>
             <TextView
                 android:id="@+id/product_detail_stock"
                 android:layout_width="wrap_content"
@@ -105,6 +125,16 @@
                 android:textSize="20sp"
                 android:fontFamily="@font/open_sans_bold"
                 android:text="Kho"/>
+            <ImageView
+                android:id="@+id/product_detail_image_inventory"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                app:layout_constraintEnd_toStartOf="@id/product_detail_stock"
+                app:layout_constraintTop_toBottomOf="@id/product_detail_ratingBar"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:src="@drawable/ic_baseline_inventory_24"/>
             <TextView
                 android:id="@+id/product_detail_stock_sub"
                 android:layout_width="wrap_content"
@@ -116,7 +146,8 @@
                 android:layout_marginEnd="15dp"
                 android:textSize="20sp"
                 android:fontFamily="@font/open_sans_bold"
-                android:text="Stock In"/>
+                android:text="Stock In"
+                android:visibility="invisible"/>
             <TextView
                 android:id="@+id/product_detail_sale_sub"
                 android:layout_width="wrap_content"
@@ -128,7 +159,8 @@
                 android:layout_marginEnd="15dp"
                 android:textSize="20sp"
                 android:fontFamily="@font/open_sans_bold"
-                android:text="Sale"/>
+                android:text="Sale"
+                android:visibility="invisible"/>
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
