--- a/GardeningServices/app/src/main/res/layout/fragment_profile.xml
+++ b/GardeningServices/app/src/main/res/layout/fragment_profile.xml
@@ -69,6 +69,7 @@
                     android:gravity="center" />
             </com.google.android.material.card.MaterialCardView>
             <com.google.android.material.card.MaterialCardView
+                android:id="@+id/tv_edit_profile"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginStart="40dp"
@@ -76,15 +77,22 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="5dp"
                 android:backgroundTint="@color/White2">
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/tv_edit_profile"
-                    style="@style/productNameTextView"
-                    android:layout_height="match_parent"
-                    android:text="Profile"
-                    android:textAlignment="center"
-                    android:gravity="center" />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <androidx.appcompat.widget.AppCompatTextView
+                        style="@style/productNameTextView"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_centerHorizontal="true"
+                        android:text="Profile"
+                        android:textAlignment="center"
+                        android:gravity="center" />
+                </RelativeLayout>
             </com.google.android.material.card.MaterialCardView>
             <com.google.android.material.card.MaterialCardView
+                android:id="@+id/tv_change_password"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginStart="40dp"
@@ -92,13 +100,42 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="5dp"
                 android:backgroundTint="@color/White2">
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/tv_log_out"
-                    style="@style/productNameTextView"
-                    android:layout_height="match_parent"
-                    android:text="Log out"
-                    android:textAlignment="center"
-                    android:gravity="center" />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <androidx.appcompat.widget.AppCompatTextView
+                        style="@style/productNameTextView"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:text="Change password"
+                        android:layout_centerVertical="true"
+                        android:layout_centerHorizontal="true"
+                        android:textAlignment="center"
+                        android:gravity="center" />
+                </RelativeLayout>
+            </com.google.android.material.card.MaterialCardView>
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/tv_log_out"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginStart="40dp"
+                android:layout_marginEnd="40dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="5dp"
+                android:backgroundTint="@color/White2">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <androidx.appcompat.widget.AppCompatTextView
+                        style="@style/productNameTextView"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_centerHorizontal="true"
+                        android:text="Log out"
+                        android:textAlignment="center"
+                        android:gravity="center" />
+                </RelativeLayout>
             </com.google.android.material.card.MaterialCardView>
         </LinearLayout>
     </RelativeLayout>
